--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="#Sobre-nos">Sobre Nós</a>
                 <a href="#Destaques">Destaques</a>
                 <a href="#Catalogo">Catalogo</a>
-                <a href="#Contato">Contato</a>
+                <a href="#Contato">Contatos</a>
             </div>
         </div>
         <button class="nav-button" onclick="openNav()">
@@ -41,7 +41,7 @@
             <a class='menu-item' href="#Sobre-nos">Sobre Nós</a>
             <a class='menu-item' href="#Destaques">Destaques</a>
             <a class='menu-item' href="#Catalogo">Catalogo</a>
-            <a class='menu-item' href="#Contato">Contato</a>
+            <a class='menu-item' href="#Contato">Contatos</a>
         </div>
     </header>
     <main>
@@ -62,7 +62,7 @@
                     19. Depois na diminuição
                     dos casos, Ana Paula foi dispensada e com o valor de sua rescisão abre sua própria loja de Bolos,
                     agora em um lugar próprio
-                    e sua inauguração em 2021 <br> <br> <br> <br> Localização: <br> <a class="reference-endereco" href="https://goo.gl/maps/EgAaUtF1BAaescxq5" >Madre Tereza de Calcutá, 382 -Jardim Saint Moritz</a>
+                    e sua inauguração em 2021 <br> <br> <br> <br> Localização: <br> <a class="reference-endereco" href="https://goo.gl/maps/EgAaUtF1BAaescxq5" target="_blanck">Madre Tereza de Calcutá, 382 -Jardim Saint Moritz</a>
                 </p>
                 <img class="container-image-sobrenos" src="image/anapaula.jpg" alt="imagem-ilutrativa">
             </div>
@@ -98,9 +98,7 @@
                 <h3 class="catalogo-titulo">Bolos Caseiros</h3>
                 <div class="catalogo-container">
                     <div class="catalogo-container-item">
-                        <div class="before">
-                            <img class=" catalogo-image" src="image/bolodemilho.png" alt="bolo de milho">
-                        </div>
+                        <img class=" catalogo-image" src="image/bolodemilho.png" alt="bolo de milho">
                         <p class="catalogo-nome">Bolo de Milho <br> <button class="catalogo-button"><a class="catalogo-link" href="https://wa.me/c/5511989030414"target="_blank">Comprar</a></button></p>
                     </div>
                     <div class="catalogo-container-item">
@@ -198,7 +196,7 @@
                 <a class="footer-container-link" href="https://instagram.com/casadebolos_taboao?igshid=YmMyMTA2M2Y=" target="_blanck"><img class='footer-container-item' src="image/instagram.png" alt="instagram"></a>
                 <a class="footer-container-link" href="https://wa.me/c/5511989030414" target="_blanck"><img class='footer-container-item' src="image/whatsapp.png" alt="whatsapp"></a>
             </div>
-            <h3 class="contato-subtitulo">Localizção</h3>
+            <h3 class="contato-subtitulo">Localização</h3>
             <div class="maps">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4347.187264138843!2d-46.80533337478802!3d-23.621033178819683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce54ebd2fb5a31%3A0xdc7af4682c823d6a!2sR.%20Me.%20Teresa%20de%20Calcut%C3%A1%2C%20382%20-%20Jardim%20Saint%20Moritz%2C%20Tabo%C3%A3o%20da%20Serra%20-%20SP%2C%2006787-545!5e0!3m2!1spt-BR!2sbr!4v1670955537853!5m2!1spt-BR!2sbr" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
